# tessera

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  Tessera-MVP-Plan-v3.md
.github/workflows/: ci.yml
crates/semblance-cli/: Cargo.toml
crates/semblance-cli/src/: main.rs
crates/semblance-cli/src/commands/: mod.rs
crates/semblance-core/: Cargo.toml
crates/semblance-core/src/: lib.rs
crates/semblance-core/src/artifact/: mod.rs
crates/semblance-core/src/blob/: mod.rs
crates/semblance-core/src/chunk/: mod.rs
crates/semblance-core/src/crypto/: mod.rs
crates/semblance-core/src/db/migrations/: mod.rs
crates/semblance-core/src/disclosure/: mod.rs
crates/semblance-core/src/embed/: mod.rs
crates/semblance-core/src/extract/: mod.rs
crates/semblance-core/src/index/: mod.rs
crates/semblance-core/src/lens/: mod.rs
crates/semblance-core/src/receipt/: mod.rs
crates/semblance-core/src/space/: mod.rs
crates/semblance-core/src/vault/: mod.rs
crates/semblance-gateway/: Cargo.toml
crates/semblance-gateway/src/: main.rs
crates/semblance-gateway/src/agent/: mod.rs
crates/semblance-gateway/src/routes/: mod.rs
crates/semblance-gateway/src/stream/: mod.rs
crates/tessera-cli/: Cargo.toml
crates/tessera-cli/src/: main.rs
crates/tessera-cli/src/commands/: mod.rs
crates/tessera-core/: Cargo.toml
crates/tessera-core/src/: lib.rs
crates/tessera-core/src/db/: mod.rs
crates/tessera-core/src/index/: mod.rs
crates/tessera-core/src/lens/: mod.rs
crates/tessera-core/src/search/: mod.rs
crates/tessera-gateway/: Cargo.toml
crates/tessera-gateway/src/: main.rs
crates/tessera-gateway/src/auth/: mod.rs
spec/: gateway-api.yaml  lens-policy.schema.json  receipt.schema.json
specs/: Semblance-AI-Executive-Summary.docx  Semblance-MVP-Plan-v2.md
