[package]
name = "semblance-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "semblance"
path = "src/main.rs"

[dependencies]
semblance-core = { path = "../semblance-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
