[package]
name = "semblance-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
pdf-extract = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
security-framework = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
