[package]
name = "semblance-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "semblance-gateway"
path = "src/main.rs"

[dependencies]
semblance-core = { path = "../semblance-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
